--- a/msg-step/src/index.css
+++ b/msg-step/src/index.css
@@ -2,3 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active {
+    @apply bg-indigo-600 w-16 h-16 rounded-full text-white pt-4 font-bold text-lg
+}
+
+.custom-btn{
+    @apply w-32  bg-indigo-600 rounded-full text-xl font-semibold text-white pt-4
+}
