--- a/msg-step/src/index.css
+++ b/msg-step/src/index.css
@@ -8,7 +8,7 @@
 }
 
 .custom-btn{
-    @apply w-32  bg-indigo-600 rounded-full text-xl font-semibold text-white pt-4
+    @apply w-32 h-14 bg-indigo-600 rounded-full text-xl font-semibold text-white pt-3
 }
 
 .not-active {
