--- a/msg-step/src/index.css
+++ b/msg-step/src/index.css
@@ -14,3 +14,11 @@
 .not-active {
     @apply bg-slate-300 w-16 h-16 rounded-full text-slate-400 pt-4 font-bold text-lg
 }
+
+.close-btn {
+    @apply mx-auto mt-5 w-20 text-center rounded-full p-2 bg-indigo-800 text-slate-50 shadow-md
+}
+
+.step-father{
+    @apply text-center w-2/4 mx-auto bg-slate-200 rounded-2xl mt-28 shadow-md
+}
