feat: add basic structure of component

--- a/msg-step/src/index.css
+++ b/msg-step/src/index.css
@@ -22,3 +22,15 @@
 .step-father{
     @apply text-center w-2/4 mx-auto bg-slate-200 rounded-2xl mt-28 shadow-md mb-20
 }
+
+.collapes-dive {
+    @apply bg-red-300 w-3/5 p-4 mx-auto mt-10
+}
+
+.collapes-p {
+    @apply bg-red-200 text-nowrap overflow-hidden truncate  p-2 
+}
+
+.collapes-show {
+    @apply text-red-700
+}
